# rustgo

./: Cargo.toml  README.md
assets/: design.mermaid
benches/: disjoint_set_bench.rs
crates/game/: Cargo.toml
crates/game/examples/: dummy_vs_gnugo.rs  two_gnugo.rs
crates/game/src/: common.rs  game.rs  lib.rs  player.rs  team.rs
crates/game/src/player/: channel_player.rs  dummy_player.rs  local_gnugo_player.rs
crates/gui/: Cargo.toml
crates/gui/examples/: egui_demo.rs
crates/gui/src/: lib.rs  main.rs  network_task.rs  view.rs
crates/rustgo/: Cargo.toml
crates/rustgo/benches/: disjoint_set_bench.rs
crates/rustgo/examples/: demo.rs  piped_gnugo.rs  random_play.rs  two_gnugo.rs
crates/rustgo/src/: board.rs  common.rs  game.rs  lib.rs  player.rs
crates/rustgo/src/common/: disjoint_set.rs  stone.rs
crates/rustgo/src/player/: channel_player.rs  dummy_player.rs  local_gnugo_player.rs
crates/rustgo/tests/: board_test.rs  disjoint_set_test.rs
crates/server/: Cargo.toml
crates/server/src/: client.rs  common.rs  lib.rs  lobby.rs  main.rs  room.rs  router.rs  session.rs
examples/: dummy_vs_gnugo.rs  egui_demo.rs  piped_gnugo.rs  random_play.rs  two_gnugo.rs
src/: backend.rs  board.rs  common.rs  engine.rs  game.rs  lib.rs  main.rs  model.rs  player.rs  ui.rs  view.rs
src/backend/: board.rs  common.rs  coord.rs  disjoint_set.rs  engine.rs  stone.rs
src/backend/engine/: group_info.rs
src/common/: coord.rs  disjoint_set.rs  stone.rs
src/engine/: dummy_engine.rs
src/player/: dummy_player.rs  local_gnugo_player.rs
tests/: board_test.rs  disjoint_set_test.rs
