[package]
name = "rustgo"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts", "glow", "x11"
] }
rand = "0.9.2"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.9.2"

[[bench]]
name = "disjoint_set_bench"
harness = false

[profile.release]
lto = true
strip = true
