[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
rustgo = { path = "../rustgo" }
tokio = { version = "1.51.0", features = ["full"] }

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
collapsible_else_if = "allow"
