[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts", "glow", "x11"
] }
rustgo = { path = "../rustgo" }
game = { path = "../game" }
server = { path = "../server" }
tokio = { version = "1.51.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
collapsible_else_if = "allow"
