[package]
name = "rustgo"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[[bench]]
name = "disjoint_set_bench"
harness = false

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
collapsible_else_if = "allow"
