[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
log = "0.4.29"
rustgo = { path = "../rustgo" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
collapsible_else_if = "allow"
